--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="contato__input">
             <input type="date" name="data" id="data" data-label>
-            <label for="data">Data do evento</label>
+            <label for="data" class="date">Data do evento</label>
           </div>
           <div class="contato__input">
             <textarea name="mensagem" id="mensagem" data-label></textarea>
