--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container home__container">
         <div class="home__content">
           <h1 class="home__title">O melhor espaço do ABC</h1>
-          <p class="home__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Parturient et fringilla dui suspendisse eu curabitur posuere ultricies cursus. Cursus eu mauris mauris, urna diam faucibus. Faucibus in amet amet pretium mi est. Lacus, varius est quam scelerisque elementum eros vitae, pretium.</p>
+          <p class="home__text">O buffet FantastiKids unidade V é mais do que um salão de festas. Aqui nós realizamos sonhos! Com um atendimento humanizado e uma recepção aconchegante, você terá à sua disposição diversas opções, para que sua festa ocorra de forma personalizada, do modo que sempre idealizou!</p>
           <nav class="home__links">
             <a href="#orcamento" class="home__link">Solicitar Orçamento</a>
             <a href="#sobre" class="home__link">Saiba mais</a>
@@ -74,7 +74,7 @@
       <div class="container sobre__container">
         <div class="sobre__content">
           <h1 class="sobre__title">Nos conheça melhor!</h1>
-          <p class="sobre__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque. Tortor, aenean tellus venenatis a integer est. Ullamcorper ornare volutpat lectus congue. Viverra in tellus ullamcorper suscipit ac venenatis interdum in. Nullam quisque pharetra, nulla velit cursus cras pharetra. Ultrices mi lacus tellus ac, risus, habitasse porta nunc, faucibus. Eleifend tristique orci commodo urna at eleifend cras sit et. Enim arcu a leo in blandit pretium lorem ridiculus. Eget viverra arcu facilisi in mattis lobortis lorem eu.</p>
+          <p class="sobre__text">O Buffet FantastiKids Unidade V possui ambientes espaçosos e acolhedores, para que seusconvidados tenham o melhor conforto, além de garantir diversão e alegria para as crianças. Tudo que você busca para realizar a festa dos seus sonhos, com atrações para todas as idades e serviços para te atender em todas as situações! Vamos construir juntos, um mundoque contenha magia e muitas brincadeiras para seus filhos!</p>
           <a href="#orcamento" class="sobre__link">Solicitar Orçamento</a>
         </div>
         <div class="sobre__image">
@@ -85,7 +85,7 @@
     <section class="espaco" id="espaco">
       <div class="container espaco__container">
         <h1 class="espaco__title">Nosso Espaço</h1>
-        <p class="espaco__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque. Tortor, aenean tellus venenatis a integer est. Ullamcorper ornare volutpat lectus congue. Viverra in tellus ullamcorper suscipit ac venenatis interdum in. Nullam quisque pharetra, nulla velit cursus cras pharetra.</p>
+        <p class="espaco__text">Estamos localizados na Avenida Dom Pedro II, 3206, no bairro Campestre, em Santo André. O Buffet FantastiKids Unidade V tem diversos ambientes, brinquedos e serviços que irão certificar que sua festa ocorrerá do modo que sempre quis e que cada convidado saia da sua celebração com o coração repleto de alegria!</p>
         <div class="espaco__wrapper"></div>
         <div class="espaco__linkWrapper">
           <div class="espaco__balls espaco__balls--left" aria-hidden="true">
@@ -121,14 +121,14 @@
     <section class="atracoes" id="atracoes">
       <div class="container atracoes__container">
         <h1 class="atracoes__title">Nossas Atrações</h1>
-        <p class="atracoes__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque. Tortor, aenean tellus venenatis a integer est. Ullamcorper ornare volutpat lectus congue. Viverra in tellus ullamcorper suscipit ac venenatis interdum in. Nullam quisque pharetra, nulla velit cursus cras pharetra.</p>
+        <p class="atracoes__text">Barco Viking, La Bamba, Tombo Legal, Mini roda gigante, camarim, Espaço baby com piscina de bolinha, mini quadra de futebol, lanchonete lúdica, tobogã, brinquedão interativo com desafios e obstáculos. Trenzinho, mesa de snooker, airgame e consoles de videogames. Todos os brinquedos possuem monitores que estarão dispostos a atender as crianças e garantir segurança e diversão para todos.</p>
       </div>
     </section>
     <section class="contato" id="orcamento">
       <div class="container contato__container">
         <div class="contato__content">
           <h1 class="contato__title">Entre em contato</h1>
-          <p class="contato__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque.</p>
+          <p class="contato__text">Solicite seu orçamento agora mesmo e vamos conversar sobre sua próxima festa! Será maravilhoso poder receber e celebrar este momento tão especial.</p>
           <div class="contato__map">
             <div class="contato__map__inner">
               <div style="width: 100%; height: 100%;"><iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=100%25&amp;hl=en&amp;q=Av.%20Dom%20Pedro%20II,%203206%20-%20Tamanduate%C3%AD%203%20-%20Santo%20Andr%C3%A9%20-%20SP%2009080-001+()&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
@@ -171,6 +171,19 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container footer__container">
+      <img src="./assets/images/logo.png" alt="Fantastikids Unidade V" class="footer__image">
+      <p class="footer__text">O melhor buffet infantil da região do ABC. Mais que festas, realizamos sonhos! Vamos construir juntos um mundo encantador e repleto de magia!</p>
+    </div>
+    <div class="container footer__copy">
+      <p class="footer__copy__text">© Copyright 2021 - Buffet Fantastikids - Todos os Direitos Reservados</p>
+      <a href="https://www.noweb.io/" target="_blank" class="footer__copy__link">
+        <span>Desenvolvido por</span>
+        <img src="https://www.noweb.io/shared/shortcutMono.png" alt="Noweb Publicidade">
+      </a>
+    </div>
+  </footer>
   <script src="./assets/script.js"></script>
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="./assets/plugins/jquery-3.6.0.min.js"></script>
