--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Fantastikids</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/plugins/owl-carousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="./assets/plugins/lightbox/css/lightbox.min.css">
   <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -86,11 +87,55 @@
       <div class="container espaco__container">
         <h1 class="espaco__title">Nosso Espaço</h1>
         <p class="espaco__text">Estamos localizados na Avenida Dom Pedro II, 3206, no bairro Campestre, em Santo André. O Buffet FantastiKids Unidade V tem diversos ambientes, brinquedos e serviços que irão certificar que sua festa ocorrerá do modo que sempre quis e que cada convidado saia da sua celebração com o coração repleto de alegria!</p>
-        <div class="espaco__wrapper"></div>
+        <div class="espaco__wrapper">
+          <a href="./assets/images/espaco/image-1.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-1.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-2.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-2.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-3.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-3.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-4.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-4.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-5.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-5.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-6.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-6.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-7.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-7.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-8.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-8.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-9.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-9.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-10.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-10.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-11.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-11.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-12.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-12.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-13.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-13.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-14.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-14.png" alt="Foto do Espaço">
+          </a>
+          <a href="./assets/images/espaco/image-15.png" data-lightbox="espaco">
+            <img src="./assets/images/espaco/image-15.png" alt="Foto do Espaço">
+          </a>
+        </div>
         <div class="espaco__linkWrapper">
           <div class="espaco__balls espaco__balls--left" aria-hidden="true">
-            <div></div>
-            <div></div>
             <div></div>
             <div></div>
             <div></div>
@@ -112,8 +157,6 @@
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
           </div>
         </div>
       </div>
@@ -122,6 +165,61 @@
       <div class="container atracoes__container">
         <h1 class="atracoes__title">Nossas Atrações</h1>
         <p class="atracoes__text">Barco Viking, La Bamba, Tombo Legal, Mini roda gigante, camarim, Espaço baby com piscina de bolinha, mini quadra de futebol, lanchonete lúdica, tobogã, brinquedão interativo com desafios e obstáculos. Trenzinho, mesa de snooker, airgame e consoles de videogames. Todos os brinquedos possuem monitores que estarão dispostos a atender as crianças e garantir segurança e diversão para todos.</p>
+      </div>
+      <div class="slider owl-carousel">
+        <div class="slider__item--first">.</div>
+        <article class="slider__item slider__item--brinquedos">
+          <header class="slider__item__header">
+            <img src="./assets/images/slide/brinquedos.png" alt="Brinquedos">
+          </header>
+          <section class="slider__item__body">
+            <h1 class="slider__item__title">Brinquedos</h1>
+            <p class="slider__item__text">São atrações completas para todas as idades, que irão encantar as crianças! Agende uma visita e venha conhecer nosso buffet!</p>
+          </section>
+        </article>
+
+        <article class="slider__item slider__item--estrutura">
+          <header class="slider__item__header">
+            <img src="./assets/images/slide/estrutura.png" alt="Ótima Estrutura">
+          </header>
+          <section class="slider__item__body">
+            <h1 class="slider__item__title">Ótima estrutura</h1>
+            <p class="slider__item__text">Com acesso privilegiado e serviço de valet, possuímos 2 andares, com 300 m² em cada, além de capacidade para até 150 convidados. Tudo que seu evento precisa para que seja inesquecível!</p>
+          </section>
+        </article>
+
+        <article class="slider__item slider__item--videogame">
+          <header class="slider__item__header">
+            <img src="./assets/images/slide/videogame.png" alt="Estação Videogame">
+          </header>
+          <section class="slider__item__body">
+            <h1 class="slider__item__title">Estação Videogame</h1>
+            <p class="slider__item__text">Diversos jogos, consoles e videogames de última geração, para que as crianças e seus convidados possam se divertir.</p>
+          </section>
+        </article>
+
+        <article class="slider__item slider__item--futebol">
+          <header class="slider__item__header">
+            <img src="./assets/images/slide/futebol.png" alt="Área do Futebol">
+          </header>
+          <section class="slider__item__body">
+            <h1 class="slider__item__title">Área do Futebol</h1>
+            <p class="slider__item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque. Tortor, aenean tellus venenatis a integer est.</p>
+          </section>
+        </article>
+
+        <article class="slider__item slider__item--adulto">
+          <header class="slider__item__header">
+            <img src="./assets/images/slide/adulto.png" alt="Hora do Adulto">
+          </header>
+          <section class="slider__item__body">
+            <h1 class="slider__item__title">Hora do Adulto</h1>
+            <p class="slider__item__text">Tenha à sua disposição, drinks e bebidas para garantir o conforto dos seus convidados. Não perca essa oportunidade e entre em contato agora mesmo conosco! </p>
+          </section>
+        </article>
+      </div>
+      <div class="container slider__nav">
+        <p>Clique nas setas para navegar pelos itens do carrossel</p>
       </div>
     </section>
     <section class="contato" id="orcamento">
@@ -188,6 +286,18 @@
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="./assets/plugins/jquery-3.6.0.min.js"></script>
   <script src="./assets/plugins/lightbox/js/lightbox.min.js"></script>
+  <script src="./assets/plugins/owl-carousel/owl.carousel.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $(".owl-carousel").owlCarousel({
+        margin: 30,
+        autoWidth: true,
+        nav: true,
+        navText: ['<ion-icon name="arrow-back-outline"></ion-icon>', '<ion-icon name="arrow-forward-outline"></ion-icon>'],
+        slideBy: 3,
+      });
+    });
+  </script>
 </body>
 
 </html>
