--- a/index.html
+++ b/index.html
@@ -14,37 +14,39 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="container header__container">
-      <a href="./index.html" aria-label="Home" class="header__logo">
-        <img src="./assets/images/logo.png" alt="Fantastikids Unidade V">
-      </a>
-      <nav class="header__nav">
-        <button aria-label="Abrir Menu" type="button" class="header__button" data-mobile="button"></button>
-        <div class="menu" data-mobile="menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#home" class="menu__link">Home</a>
-            </li>
-            <li class="menu__item">
-              <a href="#sobre" class="menu__link">Sobre</a>
-            </li>
-            <li class="menu__item">
-              <a href="#espaco" class="menu__link">Espaço</a>
-            </li>
-            <li class="menu__item">
-              <a href="#atracoes" class="menu__link">Atrações</a>
-            </li>
-            <li class="menu__item">
-              <a href="#orcamento" class="menu__link menu__link--button">Solicitar Orçamento</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <div class="inital-wrapper">
+    <header class="header">
+      <div class="container header__container">
+        <a href="./index.html" aria-label="Home" class="header__logo">
+          <img src="./assets/images/logo.png" alt="Fantastikids Unidade V">
+        </a>
+        <nav class="header__nav">
+          <button aria-label="Abrir Menu" type="button" class="header__button" data-mobile="button"></button>
+          <div class="menu" data-mobile="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#home" class="menu__link">Home</a>
+              </li>
+              <li class="menu__item">
+                <a href="#sobre" class="menu__link">Sobre</a>
+              </li>
+              <li class="menu__item">
+                <a href="#espaco" class="menu__link">Espaço</a>
+              </li>
+              <li class="menu__item">
+                <a href="#atracoes" class="menu__link">Atrações</a>
+              </li>
+              <li class="menu__item">
+                <a href="#orcamento" class="menu__link menu__link--button">Solicitar Orçamento</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <div class="train-animation">
+      <img src="./assets/images/trem.png" alt="Trem" aria-hidden="true">
     </div>
-  </header>
-  <div class="train-animation">
-    <img src="./assets/images/trem.png" alt="Trem" aria-hidden="true">
   </div>
   <main>
     <section id="home" class="home">
