--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/plugins/owl-carousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="./assets/plugins/lightbox/css/lightbox.min.css">
+  <link rel="stylesheet" href="./assets/plugins/magnific-popup/magnific-css.css">
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 
@@ -50,7 +50,7 @@
   </div>
   <main>
     <section id="home" class="home">
-      <div class="home__gallery">
+      <div class="home__gallery popup-gallery">
         <a href="./assets/images/home/image-1.png" data-lightbox="home">
           <img src="./assets/images/home/image-1.png" alt="Imagem 1">
         </a>
@@ -92,7 +92,7 @@
       <div class="container espaco__container">
         <h1 class="espaco__title">Nosso Espaço</h1>
         <p class="espaco__text">Estamos localizados na Avenida Dom Pedro II, 3206, no bairro Campestre, em Santo André. O Buffet FantastiKids Unidade V tem diversos ambientes, brinquedos e serviços que irão certificar que sua festa ocorrerá do modo que sempre quis e que cada convidado saia da sua celebração com o coração repleto de alegria!</p>
-        <div class="espaco__wrapper">
+        <div class="espaco__wrapper space-gallery">
           <a href="./assets/images/espaco/image-1.png" data-lightbox="espaco">
             <img src="./assets/images/espaco/image-1.png" alt="Foto do Espaço">
           </a>
@@ -296,7 +296,48 @@
   <script src="./assets/script.js"></script>
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="./assets/plugins/jquery-3.6.0.min.js"></script>
-  <script src="./assets/plugins/lightbox/js/lightbox.min.js"></script>
+  <script src="./assets/plugins/magnific-popup/magnific-popup.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.popup-gallery').magnificPopup({
+        delegate: 'a',
+        type: 'image',
+        tLoading: 'Loading image #%curr%...',
+        mainClass: 'mfp-img-mobile',
+        gallery: {
+          enabled: true,
+          navigateByImgClick: true,
+          preload: [0, 1] // Will preload 0 - before current, and 1 after the current image
+        },
+        image: {
+          tError: '<a href="%url%">The image #%curr%</a> could not be loaded.',
+          titleSrc: function (item) {
+            return item.el.attr('title') + '';
+          }
+        }
+      });
+    });
+
+    $(document).ready(function () {
+      $('.space-gallery').magnificPopup({
+        delegate: 'a',
+        type: 'image',
+        tLoading: 'Loading image #%curr%...',
+        mainClass: 'mfp-img-mobile',
+        gallery: {
+          enabled: true,
+          navigateByImgClick: true,
+          preload: [0, 1] // Will preload 0 - before current, and 1 after the current image
+        },
+        image: {
+          tError: '<a href="%url%">The image #%curr%</a> could not be loaded.',
+          titleSrc: function (item) {
+            return item.el.attr('title') + '';
+          }
+        }
+      });
+    });
+  </script>
   <script src="./assets/plugins/owl-carousel/owl.carousel.min.js"></script>
   <script>
     $(document).ready(function () {
