--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     </div>
   </div>
   <main>
+    <div class="container">
+      <h1 class="home__title home__title--mobile">O melhor espaço do ABC</h1>
+    </div>
     <section id="home" class="home">
       <div class="home__gallery popup-gallery">
         <a href="./assets/images/home/image-1.png" data-lightbox="home">
@@ -63,7 +66,7 @@
       </div>
       <div class="container home__container">
         <div class="home__content">
-          <h1 class="home__title">O melhor espaço do ABC</h1>
+          <h1 class="home__title home__title--desktop">O melhor espaço do ABC</h1>
           <p class="home__text">O buffet FantastiKids unidade V é mais do que um salão de festas. Aqui nós realizamos sonhos! Com um atendimento humanizado e uma recepção aconchegante, você terá à sua disposição diversas opções, para que sua festa ocorra de forma personalizada, do modo que sempre idealizou!</p>
           <nav class="home__links">
             <a href="#orcamento" class="home__link">Solicitar Orçamento</a>
@@ -81,11 +84,12 @@
         <div class="sobre__content">
           <h1 class="sobre__title">Nos conheça melhor!</h1>
           <p class="sobre__text">O Buffet FantastiKids Unidade V possui ambientes espaçosos e acolhedores, para que seusconvidados tenham o melhor conforto, além de garantir diversão e alegria para as crianças. Tudo que você busca para realizar a festa dos seus sonhos, com atrações para todas as idades e serviços para te atender em todas as situações! Vamos construir juntos, um mundoque contenha magia e muitas brincadeiras para seus filhos!</p>
-          <a href="#orcamento" class="sobre__link">Solicitar Orçamento</a>
+          <a href="#orcamento" class="sobre__link sobre__link--desktop">Solicitar Orçamento</a>
         </div>
         <div class="sobre__image">
           <img src="./assets/images/sobre/criancas.png" alt="Crianças">
         </div>
+        <a href="#orcamento" class="sobre__link sobre__link--mobile">Solicitar Orçamento</a>
       </div>
     </section>
     <section class="espaco" id="espaco">
