--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <main>
     <div class="container">
-      <h1 class="home__title home__title--mobile">O melhor espaço do ABC</h1>
+      <h1 class="home__title home__title--mobile">O melhor espaço do ABC !</h1>
     </div>
     <section id="home" class="home">
       <div class="home__gallery popup-gallery">
@@ -66,8 +66,8 @@
       </div>
       <div class="container home__container">
         <div class="home__content">
-          <h1 class="home__title home__title--desktop">O melhor espaço do ABC</h1>
-          <p class="home__text">O buffet FantastiKids unidade V é mais do que um salão de festas. Aqui nós realizamos sonhos! Com um atendimento humanizado e uma recepção aconchegante, você terá à sua disposição diversas opções, para que sua festa ocorra de forma personalizada, do modo que sempre idealizou!</p>
+          <h1 class="home__title home__title--desktop">O melhor espaço do ABC!</h1>
+          <p class="home__text">O Buffet Fantastikids Unidade V é mais do que um salão de festas. Aqui nós realizamos sonhos! Com um atendimento humanizado e uma recepção aconchegante, você terá à sua disposição diversas opções, para que sua festa ocorra de forma personalizada, do modo que sempre idealizou!</p>
           <nav class="home__links">
             <a href="#orcamento" class="home__link">Solicitar Orçamento</a>
             <a href="#sobre" class="home__link">Saiba mais</a>
@@ -83,10 +83,11 @@
       <div class="container sobre__container">
         <div class="sobre__content">
           <h1 class="sobre__title">Nos conheça melhor!</h1>
+          <img src="./assets/images/sobre/criancas.png" alt="Crianças" class="sobre__image__mobile">
           <p class="sobre__text">O Buffet FantastiKids Unidade V possui ambientes espaçosos e acolhedores, para que seusconvidados tenham o melhor conforto, além de garantir diversão e alegria para as crianças. Tudo que você busca para realizar a festa dos seus sonhos, com atrações para todas as idades e serviços para te atender em todas as situações! Vamos construir juntos, um mundoque contenha magia e muitas brincadeiras para seus filhos!</p>
           <a href="#orcamento" class="sobre__link sobre__link--desktop">Solicitar Orçamento</a>
         </div>
-        <div class="sobre__image">
+        <div class="sobre__image sobre__image--desktop">
           <img src="./assets/images/sobre/criancas.png" alt="Crianças">
         </div>
         <a href="#orcamento" class="sobre__link sobre__link--mobile">Solicitar Orçamento</a>
@@ -209,21 +210,22 @@
 
         <article class="slider__item slider__item--futebol">
           <header class="slider__item__header">
-            <img src="./assets/images/slide/futebol.png" alt="Área do Futebol">
+            <img src="./assets/images/slide/gastronomia.png" alt="Gastronomia">
           </header>
           <section class="slider__item__body">
-            <h1 class="slider__item__title">Área do Futebol</h1>
-            <p class="slider__item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas risus tristique donec tincidunt elementum ullamcorper enim aenean neque. Tortor, aenean tellus venenatis a integer est.</p>
+            <h1 class="slider__item__title">Gastronomia</h1>
+            <p class="slider__item__text">Trabalhamos com as mais variadas opções gastronômicas, para que sua festa também tenha muita fartura. Nossa equipe de cozinheiros e garçons estão sempre prontos para atender seus convidados. Entre em contato conosco e agende uma degustação!</p>
           </section>
         </article>
 
         <article class="slider__item slider__item--adulto">
           <header class="slider__item__header">
-            <img src="./assets/images/slide/adulto.png" alt="Hora do Adulto">
+            <img src="./assets/images/slide/adulto.png" alt="Drinks">
           </header>
           <section class="slider__item__body">
-            <h1 class="slider__item__title">Hora do Adulto</h1>
+            <h1 class="slider__item__title">Drinks</h1>
             <p class="slider__item__text">Tenha à sua disposição, drinks e bebidas para garantir o conforto dos seus convidados. Não perca essa oportunidade e entre em contato agora mesmo conosco! </p>
+
           </section>
         </article>
       </div>
